.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glanomaly__c.object
<CustomObject>
    <description>glanomaly__c</description>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>LEFT(rstkf__glanomaly_glacct__r.Name + &apos;(&apos; +  TEXT(rstkf__glanomaly_reportnum__c) + &apos;)-&apos; +  rstkf__glanomaly_glperiod__r.Name, 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glanomaly_apinvtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Transaction</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipName>glanomalies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glanomaly_appayd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AP Payment Detail</label>
        <referenceTo>rstkf__appayd__c</referenceTo>
        <relationshipName>glanomalies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glanomaly_arcashd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AR Cash Detail</label>
        <referenceTo>rstkf__arcashd__c</referenceTo>
        <relationshipName>glanomalies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glanomaly_arinvtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receivable Transaction</label>
        <referenceTo>rstkf__arinvtxn__c</referenceTo>
        <relationshipName>glanomalies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glanomaly_glacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipName>glanomalies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glanomaly_glbanktxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Bank Txn</label>
        <referenceTo>rstkf__glbanktxn__c</referenceTo>
        <relationshipName>glanomalies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glanomaly_glperiod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Period</label>
        <referenceTo>rstkf__glperiod__c</referenceTo>
        <relationshipName>glanomalies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glanomaly_gltxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Transaction</label>
        <referenceTo>rstkf__gltxn__c</referenceTo>
        <relationshipName>glanomalies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glanomaly_keyval__c</fullName>
        <label>Key Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glanomaly_nothingfound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Anomalies Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glanomaly_reportissue__c</fullName>
        <formula>IF (rstkf__glanomaly_reportnum__c = 1	,&quot;Suspicious cash postings #1. Cash postings from other than expected GLTXN_SOURCEs.&quot;,
IF (rstkf__glanomaly_reportnum__c = 2	,&quot;Suspicious cash postings #2. Cash postings without perfectly matching GLBANKTXN.&quot;,
IF (rstkf__glanomaly_reportnum__c = 3	,&quot;Suspicious bank transactions #1. GLBANKTXNs without corresponding GL postings to cash.&quot;,
IF (rstkf__glanomaly_reportnum__c = 11	,&quot;Suspicious AR postings #1. AR postings from other than expected GLTXN_SOURCEs.&quot;,
IF (rstkf__glanomaly_reportnum__c = 12	,&quot;Suspicious AR postings #2. AR postings that haven&apos;t happened yet [sessions still unposted].&quot;,
IF (rstkf__glanomaly_reportnum__c = 13	,&quot;Suspicious AR postings #3. Inexplicable posting amounts.&quot;,
IF (rstkf__glanomaly_reportnum__c = 14	,&quot;Suspicious AR postings #4. GL postings in periods other than transaction date period.&quot;,
IF (rstkf__glanomaly_reportnum__c = 15	,&quot;Suspicious AR postings #5. Cash receipt postings without perfectly matching GLBANKTXN.&quot;,
IF (rstkf__glanomaly_reportnum__c = 16	,&quot;Suspicious bank transactions #2. GLBANKTXNs without corresponding GL postings to AR.&quot;,
IF (rstkf__glanomaly_reportnum__c = 21	,&quot;Suspicious inventory postings #1. inventory postings from other than expected GLTXN_SOURCEs.&quot;,
IF (rstkf__glanomaly_reportnum__c = 22	,&quot;Suspicious inventory postings #2. inventory postings that haven&apos;t happened yet [sessions still unposted].&quot;,
IF (rstkf__glanomaly_reportnum__c = 23	,&quot;Suspicious inventory postings #3. Inexplicable posting amounts.&quot;,
IF (rstkf__glanomaly_reportnum__c = 24	,&quot;Suspicious inventory postings #4. GL postings in periods other than transaction date period.&quot;,
IF (rstkf__glanomaly_reportnum__c = 31	,&quot;Suspicious WIP postings #1. WIP postings from other than expected GLTXN_SOURCEs.&quot;,
IF (rstkf__glanomaly_reportnum__c = 32	,&quot;Suspicious WIP postings #2. WIP postings that haven&apos;t happened yet [sessions still unposted].&quot;,
IF (rstkf__glanomaly_reportnum__c = 33	,&quot;Suspicious WIP postings #3. Inexplicable posting amounts.&quot;,
IF (rstkf__glanomaly_reportnum__c = 34	,&quot;Suspicious WIP postings #4. GL postings in periods other than transaction date period.&quot;,
IF (rstkf__glanomaly_reportnum__c = 41	,&quot;Suspicious AP postings #1. AP postings from other than expected GLTXN_SOURCEs.&quot;,
IF (rstkf__glanomaly_reportnum__c = 42	,&quot;Suspicious AP postings #2. AP postings that haven&apos;t happened yet [APINVH &amp; APPAYH sessions still unposted].&quot;,
IF (rstkf__glanomaly_reportnum__c = 43	,&quot;Suspicious AP postings #3. AP postings that haven&apos;t happened yet [TTAPHDR sessions still unposted].&quot;,
IF (rstkf__glanomaly_reportnum__c = 44	,&quot;Suspicious AP postings #4. Inexplicable posting amounts from APINVTXN, etc.&quot;,
IF (rstkf__glanomaly_reportnum__c = 45	,&quot;Suspicious AP postings #5. GL postings in periods other than transaction date period.&quot;,
IF (rstkf__glanomaly_reportnum__c = 46	,&quot;Suspicious AP postings #6. Payment postings without perfectly matching GLBANKTXN.&quot;,
IF (rstkf__glanomaly_reportnum__c = 47	,&quot;Suspicious bank transactions #3. GLBANKTXNs without corresponding GL postings to AP.&quot;,
IF (rstkf__glanomaly_reportnum__c = 51	,&quot;Suspicious Accrued AP postings #1. Accrued AP postings from other than expected GLTXN_SOURCEs.&quot;,
IF (rstkf__glanomaly_reportnum__c = 52	,&quot;Suspicious Accrued AP postings #2. Accrued AP postings that haven&apos;t happened yet [sessions still unposted].&quot;,
IF (rstkf__glanomaly_reportnum__c = 53	,&quot;Suspicious Accrued AP postings #3. Inexplicable posting amounts.&quot;,
IF (rstkf__glanomaly_reportnum__c = 54	,&quot;Suspicious Accrued AP postings #4. GL postings in periods other than transaction date period.&quot;,null
))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glanomaly_reportnum__c</fullName>
        <label>Report Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glanomaly_soinv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice</label>
        <referenceTo>rstk__soinv__c</referenceTo>
        <relationshipName>glanomalies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glanomaly_sytxncst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Transaction</label>
        <referenceTo>rstk__sytxncst__c</referenceTo>
        <relationshipName>glanomalies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glanomaly_ttaphdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO Match Invoice</label>
        <referenceTo>rstk__ttaphdr__c</referenceTo>
        <relationshipName>glanomalies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <listViews>
        <fullName>rstkf__GL_Anomalies</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>rstkf__glanomaly_glperiod__c</columns>
        <columns>rstkf__glanomaly_glacct__c</columns>
        <columns>rstkf__glanomaly_keyval__c</columns>
        <columns>rstkf__glanomaly_nothingfound__c</columns>
        <columns>rstkf__glanomaly_reportnum__c</columns>
        <columns>rstkf__glanomaly_gltxn__c</columns>
        <columns>rstkf__glanomaly_glbanktxn__c</columns>
        <columns>rstkf__glanomaly_arinvtxn__c</columns>
        <columns>rstkf__glanomaly_arcashd__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>GL Anomalies</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__GL_Anomalies_Filtered</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>rstkf__glanomaly_glperiod__c</columns>
        <columns>rstkf__glanomaly_glacct__c</columns>
        <columns>rstkf__glanomaly_keyval__c</columns>
        <columns>rstkf__glanomaly_nothingfound__c</columns>
        <columns>rstkf__glanomaly_reportnum__c</columns>
        <columns>rstkf__glanomaly_gltxn__c</columns>
        <columns>rstkf__glanomaly_glbanktxn__c</columns>
        <columns>rstkf__glanomaly_arinvtxn__c</columns>
        <columns>rstkf__glanomaly_arcashd__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>10/5/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>rstkf__glanomaly_nothingfound__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>GL Anomalies - Filtered</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__GL_Anomalies_TODAY</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>rstkf__glanomaly_glperiod__c</columns>
        <columns>rstkf__glanomaly_glacct__c</columns>
        <columns>rstkf__glanomaly_keyval__c</columns>
        <columns>rstkf__glanomaly_nothingfound__c</columns>
        <columns>rstkf__glanomaly_reportnum__c</columns>
        <columns>rstkf__glanomaly_gltxn__c</columns>
        <columns>rstkf__glanomaly_glbanktxn__c</columns>
        <columns>rstkf__glanomaly_arinvtxn__c</columns>
        <columns>rstkf__glanomaly_arcashd__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>GL Anomalies - TODAY</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_OBSOLETE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>